2-MISと3MISの証明一応書いた

--- a/MT/M2sato.tex
+++ b/MT/M2sato.tex
@@ -218,32 +218,35 @@ $CONGEST$モデルにおいて,2-MIS検証問題を解く全てのアルゴリズムは$\tilde{\Omega} (
 \item $\forall i((a_{i}^{1}, b_{i}^{1}), (a_{i}^{2}, b_{i}^{2})) \in E$
 %\item $\forall i((a_{i}^{1}, s), (a_{i}^{2}, s), (b_{i}^{1}, s), (b_{i}^{2}, s)) \in E$
 \item $(a_{i}^{1}, a_{j}^{2}) \in E_{A} \Leftrightarrow x_{i, j} = 0$
-\item $W(y)$は$y$中に含まれる1の個数を表す.$K_{W(y)}$の頂点$c_{i, j}$は$y_{i, j} = 1$であるような$(i, j)$で
-インデックスづけされているとする.このとき,$(c_{i, j}, b_{i}^{1}) \in E_{B}$ かつ $(c_{i, j}, b_{j}^{2}) \in E_{B}$
+\item $W(y)$は0/1のデータ列$y$中に含まれる1の個数を表す.
+$K_{W(y)}$中の頂点$c_{i, j}$は$y_{i, j} = 1$であるような$(i, j)$でインデックスづけされるものとする. \\
+このとき,$(c_{i, j}, b_{i}^{1}) \in E_{B}$ かつ $(c_{i, j}, b_{j}^{2}) \in E_{B}$
 \end{itemize}
 
-%ここらへんは3MISのやつコピペしただけなのでまだ途中
 このグラフは,「$G'$中に与えられている独立集合が,$DISJ_{N \times N} (x, y) = 1$のときのみ2-MISでない」という特性を持つ. 
 (なお,$DISJ_{N \times N} (x, y) :=\bigvee_{i = 1}^{N} \bigvee_{j = 1}^{N} x_{i, j} \land y_{i, j}$で定義される.)
 このグラフが上記の特性を満たしていることを示すために,次の2点を確認する. \\
 (i)$DISJ_{N \times N} (x, y) = 1$のとき,グラフに与えられている独立集合が2-MISでない: \\
-$x_{i, j} = y_{i, j} =1$とすると,$s$と$c_{i}^{1}$と$c_{j}^{2}$の3点を取り除いて$a_{i}^{1}$, $b_{i}^{1}$, $a_{j}^{2}$, $c_{j}^{2}$の
-4点を追加できることから確認できる. \\
+$x_{i, j} = y_{i, j} =1$とすると,$b_{i}^{1}$と$b_{j}^{2}$の2点を取り除いて$a_{i}^{1}$, $a_{j}^{2}$, $c_{i, j}$の
+3点を追加できることから確認できる. \\
 (ii)$DISJ_{N \times N} (x, y) = 0$のとき,グラフに与えられている独立集合が2-MISである: \\ 
-グラフに与えられている独立集合が3-MISでないと仮定する.このとき,ある3点を取り除くことで独立集合に追加できる4点が存在するが,
-$A^{1}, A^{2}, B^{1}, B^{2}$がそれぞれクリークであるため,4点を追加するためにはそれぞれから1点を選ぶ必要がある.
-$c_{i}^{1}$を取り除いて$a_{i}^{1}$と$b_{i}^{1}$を追加し,,$c_{j}^{2}$を取り除いて,$a_{j}^{2}$と$b_{j}^{2}$を独立集合に追加したとする.
-$a_{i}^{1}$と$a_{i}^{2}$が両方とも追加できるのは$x_{i, j} = 1$のときのみであり,$b_{i}^{1}$と$b_{i}^{2}$が両方とも追加できるのは
-$y_{i, j} = 1$のときのみであるが,これは$DISJ_{N \times N} (x, y) = 0$に矛盾する.したがってグラフに与えられている独立集合は3-MISである.
+グラフに与えられている独立集合が2-MISでないと仮定する.このとき,ある2点を取り除くことで独立集合に追加できる3点が存在する.
+2点の取り除き方は(1)$b_{i}^{1}$と$b_{j}^{1}(i \neq j)$, (2)$b_{i}^{2}$と$b_{j}^{2}(i \neq j)$, (3)$b_{i}^{1}$と$b_{j}^{2}$が考えられる.
+(1)では$a_{i}^{1}$と$a_{j}^{1}$の2点しか追加できる可能性がなく,(2)では$a_{i}^{2}$と$a_{j}^{2}$の2点しか追加できる可能性がない.
+(3)において,$b_{i}^{1}$を取り除いて$a_{i}^{1}$を追加し,$b_{j}^{2}$を取り除いて$a_{j}^{2}$を追加し,さらに$c_{i, j}$を追加することを考える.
+$a_{i}^{1}$と$a_{i}^{2}$が両方とも追加できるのは$x_{i, j} = 1$のときのみであり,$c_{i, j}$が追加できる($c_{i, j}$が存在する)のは
+$y_{i, j} = 1$のときのみであるが,これは$DISJ_{N \times N} (x, y) = 0$に矛盾する.したがってグラフに与えられている独立集合から2点取り除いて
+3点追加することはできないため,この独立集合は2-MISである.
 
-今回,$N \times N$ビットの交叉判定インスタンスをグラフに埋め込んでおり,カット辺のサイズ$|C| = 4N$であることがわかる.
-したがって,$CONGEST$モデルにおいてグラフ上に与えられた独立集合が3-MISであるかどうかを$r$ラウンドで判定する
+今回,$N \times N$ビットの交叉判定インスタンスをグラフに埋め込んでおり,カット辺のサイズ$|C| = 2N$であることがわかる.
+$CONGEST$モデルにおいてグラフ上に与えられた独立集合が2-MISであるかどうかを$r$ラウンドで判定する
 アルゴリズム$\mathcal{A}$が存在したとすると,アリスとボブは$O(r \cdot |C| \cdot b)$ビット通信したことになる.
 このグラフにおいてアルゴリズム$\mathcal{A}$を実行すると同時に2者間交叉判定問題も解けていることになるので,
 交叉判定問題の通信複雑性よりアリスとボブは少なくとも$\Omega (N \times N)$ビットは通信しているはずである.
-よって,$r = \Omega (N/4b) = \tilde{\Omega}(N)$ラウンドの下界を得ることができる.図\ref{3-MIS}からわかる通り,
-$A^{1}, A^{2}, B^{1}, B^{2}, C^{1}, C^{2}$は$N$頂点で構成されており,グラフ全体の頂点数$n$は$n = 6N +1$である.
-したがって$N = \Omega(n)$になるため,$\tilde{\Omega}(n)$ラウンドの下界を得ることができる. 
+よって,$r = \Omega (N / 2b) = \tilde{\Omega}(N)$ラウンドの下界を得ることができる.図\ref{2-MIS}からわかる通り,
+$A^{1}, A^{2}, B^{1}, B^{2}$は$N$頂点で構成されており,$K_{W(y)}$の頂点数は$O(N^{2})$であるため,
+グラフ全体の頂点数$n$は$n = O(N + N^{2})$である.したがって$N = O(\sqrt{n})$になるため,
+$\tilde{\Omega}(\sqrt{n})$ラウンドの下界を得ることができる. 
 \end{prf*}
 \newpage
 
@@ -283,26 +286,32 @@ $x_{i, j} = y_{i, j} =1$とすると,$s$と$c_{i}^{1}$と$c_{j}^{2}$の3点を取り除いて$
 $A^{1}, A^{2}, B^{1}, B^{2}$がそれぞれクリークであるため,4点を追加するためにはそれぞれから1点を選ぶ必要がある.
 $c_{i}^{1}$を取り除いて$a_{i}^{1}$と$b_{i}^{1}$を追加し,,$c_{j}^{2}$を取り除いて,$a_{j}^{2}$と$b_{j}^{2}$を独立集合に追加したとする.
 $a_{i}^{1}$と$a_{i}^{2}$が両方とも追加できるのは$x_{i, j} = 1$のときのみであり,$b_{i}^{1}$と$b_{i}^{2}$が両方とも追加できるのは
-$y_{i, j} = 1$のときのみであるが,これは$DISJ_{N \times N} (x, y) = 0$に矛盾する.したがってグラフに与えられている独立集合は3-MISである.
+$y_{i, j} = 1$のときのみであるが,これは$DISJ_{N \times N} (x, y) = 0$に矛盾する.したがってグラフに与えられている独立集合から3点取り除いて
+4点追加することはできないため,この独立集合は3-MISである.
 
 今回,$N \times N$ビットの交叉判定インスタンスをグラフに埋め込んでおり,カット辺のサイズ$|C| = 4N$であることがわかる.
-したがって,$CONGEST$モデルにおいてグラフ上に与えられた独立集合が3-MISであるかどうかを$r$ラウンドで判定する
+$CONGEST$モデルにおいてグラフ上に与えられた独立集合が3-MISであるかどうかを$r$ラウンドで判定する
 アルゴリズム$\mathcal{A}$が存在したとすると,アリスとボブは$O(r \cdot |C| \cdot b)$ビット通信したことになる.
 このグラフにおいてアルゴリズム$\mathcal{A}$を実行すると同時に2者間交叉判定問題も解けていることになるので,
 交叉判定問題の通信複雑性よりアリスとボブは少なくとも$\Omega (N \times N)$ビットは通信しているはずである.
-よって,$r = \Omega (N/4b) = \tilde{\Omega}(N)$ラウンドの下界を得ることができる.図\ref{3-MIS}からわかる通り,
-$A^{1}, A^{2}, B^{1}, B^{2}, C^{1}, C^{2}$は$N$頂点で構成されており,グラフ全体の頂点数$n$は$n = 6N +1$である.
-したがって$N = \Omega(n)$になるため,$\tilde{\Omega}(n)$ラウンドの下界を得ることができる. 
+よって,$r = \Omega (N / 4b) = \tilde{\Omega}(N)$ラウンドの下界を得ることができる.図\ref{3-MIS}からわかる通り,
+$A^{1}, A^{2}, B^{1}, B^{2}, C^{1}, C^{2}$は$N$頂点で構成されているため,グラフ全体の頂点数$n$は$n = O(N)$である.
+したがって$N = O(n)$になるため,$\tilde{\Omega}(n)$ラウンドの下界を得ることができる. 
 \end{prf*}
 \newpage
 
 \section{$k$-MIS検証問題の下限}
-このセクションでは3-MIS検証問題の下界についての議論を行う.具体的には,次の定理を証明する.
+このセクションではk-MIS検証問題の下界についての議論を行う.具体的には,次の定理を証明する.
 
 \newpage
 
 \chapter{まとめと今後の課題}
 \section{まとめ}
+本研究では極大独立集合検証問題に対するいくつかの複雑性を示した.
+具体的には,1-MIS検証問題に対する$O(1)$ラウンドの上界,
+2-MIS検証問題に対する$\tilde{\Omega} (\sqrt{n})$ラウンドの下界
+3-MIS検証問題に対する$\tilde{\Omega} (n)$ラウンドの下界,.
+$k$-MIS検証問題($k = 4l + 5, l \geq 1$)に対する$n^{2 - \frac{1}{l + 1}}$ラウンドの下界を証明した.
 
 \section{今後の課題}
 4.3節で一般の$k$に対する$k$-MIS検証問題の下界を証明したが,$k = 4,...,8$については現在
